# PyWATER

./: .buildinfo  .gitignore  .nojekyll  CLAUDE.md  FindConservedWaters_pymolPlugin_v1.py  FindConservedWaters_pymolPlugin_v2.py  FindConservedWaters_pymolPlugin_v3.py  LOCAL_FILES_PLAN.md  MODERNIZATION_EXECPLAN.md  PyCWMs.py  PyCWMs_v4.py  PyCWMs_v5.py  README.html  README.md  README.rst  genindex.html  index.html  modules.html  objects.inv  params.json  pycwms.py  pyproject.toml  pywater.html  pywater.py  search.html  searchindex.js
Benchmark/B-Lactamase/1axb_a_0.8/: 1.pse  1axb_a_clusterPresence.txt  README
Benchmark/B-Lactamase/1axb_a_0.9/: 1.pse  1axb_a_clusterPresence.txt
Benchmark/BPTI/4pti_a/: 1.pse  4pti_a_clusterPresence.txt
Benchmark/BPTI/4pti_a_0.5/: 1.pse  4pti_a_clusterPresence.txt
Benchmark/Bromodomain/4lyw_a/: 1.pse  4lyw_a_clusterPresence.txt
Benchmark/MHC-1/1i4f_a/: 1.pse  1i4f_a_clusterPresence.txt
Benchmark/MHC-1/1i4f_a_0.5/: 1.pse  1i4f_a_clusterPresence.txt
Benchmark/Thrombin/1hai_h/: 1.pse  1hai_h_clusterPresence.txt
Benchmark/Thrombin/1hai_h_0.5/: 1.pse  1hai_h_clusterPresence.txt
Benchmark/Thrombin/1hai_l/: 1.pse  1hai_l_clusterPresence.txt
Benchmark/Thrombin/1hai_l_0.5/: 1.pse  1hai_l_clusterPresence.txt
Benchmark/Trypsin/1tpo_a/: 1.pse  1tpo_a_clusterPresence.txt
Benchmark/Trypsin/1tpo_a_0.5/: 1.pse  1tpo_a_clusterPresence.txt
_sources/: index.txt  modules.txt  pywater.txt
docs/: troubleshooting.md
tests/: pymol_stubs.py  test_pywater.py
